[build-system]
requires = ["hatchling >= 1.26", "pywin32 >= 311"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["phoenixapi"]

[project]
name = "phoenix-bot-api"
version = "1.0.7"
authors = [{ name = "Hatz" }]
description = "Python client for Phoenix API"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = ["pywin32>=311"]

[project.urls]
GitHub = "https://github.com/hatz2/PhoenixAPI"
